# same-image-detector

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/compare/: Cargo.toml
crates/compare/src/: compare.rs  lib.rs
model/: Pipfile  export_model.py  requirements.txt
