[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
rust-version = "1.96.0"
edition = "2024"

[workspace.metadata.release]
tag = false

[workspace.dependencies]
compare = { path = "./crates/compare", version = "0.1.0" }

image = "0.25.10"
rayon = "1.12.0"
ort = { version = "2.0.0-rc.12", features = ["cuda"] }
ndarray = "0.17.2"
anyhow = "1.0.103"
